--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,7 @@ set $CONFIG_PATH ~/.config
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:unifont fontformat=truetype 8
+font pango:Ubuntu fontformat=truetype 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -233,10 +233,11 @@ assign [class="TelegramDesktop"] $ws1
 # Wireless settings
 exec_always --no-startup-id $BIN_PATH/startup nm-applet
 # Background image
-exec --no-startup-id "feh --bg-scale ~/Pictures/Background/linux-arch-linux.jpg"
+exec --no-startup-id "feh --bg-scale /usr/share/pixmaps/archlinux-wallpaper.png"
 # XSS-LOCK
 exec_always --no-startup-id $BIN_PATH/startup xss-lock -l $BIN_PATH/i3-tools lock
 # Polybar
 exec_always --no-startup-id $BIN_PATH/startup -n polybar polybar top -c $CONFIG_PATH/polybar/config
 # Systemd target
 exec_always --no-startup-id "systemctl --user start wm.target"
+
