--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -40,7 +40,7 @@ padding-right = 1
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = unifont:fontformat=truetype:size=10;0
+font-0 = Ubuntu:fontformat=truetype:size=10;0
 font-1 = Siji:pixelsize=10;1
 
 tray-detached = false
