--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 !.config/i3/*
 !.config/polybar/*
 !.config/rofi/*
+!.config/gtk-3.0/*
 !.config/systemd/user/wm.target
 !.config/systemd/user/*.service
 !.local/bin/i3-tools
