--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,7 @@ set $CONFIG_PATH ~/.config
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Ubuntu fontformat=truetype 8
+font pango:Ubuntu 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
