--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 !.config/git/*
 !.config/polybar/*
 !.config/rofi/*
-!.config/gtk-3.0/*
+!.config/gtk-3.0/
+!.config/gtk-4.0/
 !.config/systemd/user/wm.target
 !.config/systemd/user/*.service
 !.local/bin/i3-tools
