Fix gitignore file and fix yad calendar

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 *
-!.bashrc
-!.profile
-!.xinitrc
-!.colors
-!.Xkbmap
-!.gitignore
-!.SpaceVim.d/init.toml
-!.config/gdb/*
-!.config/requirements.txt
-!.config/alacritty/*
-!.config/dunst/*
-!.config/i3/*
-!.config/git/*
-!.config/polybar/*
-!.config/rofi/*
-!.config/gtk-3.0/
-!.config/gtk-4.0/
-!.config/systemd/user/wm.target
-!.config/systemd/user/*.service
-!.local/bin/i3-tools
-!.local/bin/startup
+!\.bashrc
+!\.profile
+!\.xinitrc
+!\.colors
+!\.Xkbmap
+!\.gitignore
+!\.SpaceVim.d/init.toml
+!\.config/gdb/*
+!\.config/requirements.txt
+!\.config/alacritty/*
+!\.config/dunst/*
+!\.config/i3/*
+!\.config/git/*
+!\.config/polybar/*
+!\.config/rofi/*
+!\.config/gtk-3.0/
+!\.config/gtk-4.0/
+!\.config/systemd/user/wm.target
+!\.config/systemd/user/*.service
+!\.local/bin/i3-tools
+!\.local/bin/startup
 
