Move to wayland

--- a/.config/systemd/user/batify.service
+++ b/.config/systemd/user/batify.service
@@ -1,11 +1,13 @@
 [Unit]
 Description=Battery notification daemon
 Documentation=man:batify(1)
-PartOf=wm.target
+PartOf=graphical-session.target
+After=graphical-session.target
+Requisite=graphical-session.target
 
 [Service]
 ExecStart=/bin/batify -t 5 --critical-level 4
 Restart=on-abort
 
 [Install]
-WantedBy=wm.target
+WantedBy=dunst.service
