--- a/.config/systemd/user/dunst.service
+++ b/.config/systemd/user/dunst.service
@@ -1,7 +1,9 @@
 [Unit]
 Description=Dunst notification daemon
 Documentation=man:dunst(1)
-PartOf=wm.target
+PartOf=graphical-session.target
+After=graphical-session.target
+Requisite=graphical-session.target
 
 [Service]
 Type=dbus
@@ -10,4 +12,4 @@ ExecStart=/bin/dunst
 Restart=on-abort
 
 [Install]
-WantedBy=wm.target
+WantedBy=niri.service
