Fix notification enable

--- a/.config/systemd/user/swayidle.service
+++ b/.config/systemd/user/swayidle.service
@@ -10,7 +10,8 @@ Type=simple
 ExecStart=/usr/bin/swayidle -w \
           timeout 180 'tools.sh lock' \
           timeout 300 'tools.sh suspend' \
-          before-sleep 'tools.sh lock'
+          before-sleep 'tools.sh lock' \
+          after-resume 'tools.sh after-resume'
 
 [Install]
 WantedBy=niri.service
